# ws-jsonrpc

./: .gitignore  Cargo.toml  README.md
codegen/: Cargo.toml
codegen/src/: lib.rs
examples/: example1.rs
jsonrpc_codegen/: Cargo.toml
jsonrpc_codegen/src/: lib.rs
src/: handler.rs  lib.rs  request.rs  response.rs
